--- a/assets/index/Psite.html
+++ b/assets/index/Psite.html
@@ -19,11 +19,12 @@
 <div class="menu-bg">
         <div class="menu">
             <div class="menu-logo">
+                <img src="/assets/img/monitor.png" alt="">
                 <a href="#">ProjetoOne</a>
             </div>
       <div class="menu-nav">      
                 <ul>
-                    <li><a href="#inicio">Home</a></li>
+                    <li><a href="#inicio menu-logo">Home</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#contato">Contato</a></li>
                 </ul>  
@@ -31,6 +32,8 @@
     </div>
 </header>
     
+
+
 <!-- carousel -->
 <main>
 
